--- a/web-project/Gemfile
+++ b/web-project/Gemfile
@@ -1,18 +1,15 @@
 source 'https://rubygems.org'
-
+ruby "2.3.0"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.1.8'
+gem 'rails', '5.0.0'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+
+gem 'pg'
 # Use SCSS for stylesheets
-gem 'sass-rails', '~> 4.0.3'
+gem 'sass-rails'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
-# Use CoffeeScript for .js.coffee assets and views
-gem 'coffee-rails', '~> 4.0.0'
-# See https://github.com/sstephenson/execjs#readme for more supported runtimes
-# gem 'therubyracer',  platforms: :ruby
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
@@ -26,15 +23,26 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 
-# Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
-
-# Use unicorn as the app server
-# gem 'unicorn'
-
-# Use Capistrano for deployment
-# gem 'capistrano-rails', group: :development
-
-# Use debugger
-# gem 'debugger', group: [:development, :test]
+group :development, :test do
+  gem 'govuk_frontend_toolkit', :git => "https://github.com/alphagov/govuk_frontend_toolkit_gem.git", :submodules => true
+  gem 'jasmine-rails'
+  gem 'phantomjs'
+  gem 'rubocop'
+  gem 'brakeman'
+  gem 'rspec-rails'
+  gem 'binding_of_caller'
+  gem 'pry-rails'
+  gem 'factory_girl_rails'
+  gem 'annotate'
+  gem 'capybara'
+  gem 'capybara-select2'
+  gem 'better_errors'
+  gem 'selenium'
+  gem 'selenium-webdriver'
+  gem 'launchy'
+  gem 'faker'
+  gem 'database_cleaner'
+  gem 'rspec_junit_formatter'
+  gem 'rack-mini-profiler'
+end
 
