--- a/web-project/Gemfile
+++ b/web-project/Gemfile
@@ -24,6 +24,7 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'spring',        group: :development
 
 group :development, :test do
+  gem 'rb-readline'
   gem 'govuk_frontend_toolkit', :git => "https://github.com/alphagov/govuk_frontend_toolkit_gem.git", :submodules => true
   gem 'jasmine-rails'
   gem 'phantomjs'
