--- a/web-project/Gemfile
+++ b/web-project/Gemfile
@@ -24,8 +24,10 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'spring',        group: :development
 
 group :development, :test do
+  gem 'govuk_elements_rails', git: "https://github.com/alphagov/govuk_elements_rails.git", submodules: true
+  gem 'govuk_template'
+  gem 'govuk_frontend_toolkit'
   gem 'rb-readline'
-  gem 'govuk_frontend_toolkit', :git => "https://github.com/alphagov/govuk_frontend_toolkit_gem.git", :submodules => true
   gem 'jasmine-rails'
   gem 'phantomjs'
   gem 'rubocop'
