--- a/web-project/Gemfile
+++ b/web-project/Gemfile
@@ -40,8 +40,8 @@ group :development, :test do
   gem 'capybara'
   gem 'capybara-select2'
   gem 'better_errors'
-  gem 'selenium'
-  gem 'selenium-webdriver'
+  # gem 'selenium'
+  # gem 'selenium-webdriver'
   gem 'launchy'
   gem 'faker'
   gem 'database_cleaner'
